--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <modules>
         <module>rpc-core</module>
         <module>rpc-server-starter</module>
+        <module>rpc-demo-facade</module>
         <module>rpc-demo-server</module>
     </modules>
 
@@ -24,6 +25,9 @@
         <slf4j.version>1.7.32</slf4j.version>
         <gson.verison>2.8.9</gson.verison>
         <spring.boot.version>2.5.6</spring.boot.version>
+        <collections.version>4.4</collections.version>
+        <commons-lang.version>3.12.0</commons-lang.version>
+        <guava.version>31.0.1-jre</guava.version>
     </properties>
 
     <dependencyManagement>
@@ -49,6 +53,21 @@
                 <groupId>com.google.code.gson</groupId>
                 <artifactId>gson</artifactId>
                 <version>${gson.verison}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>${commons-lang.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-collections4</artifactId>
+                <version>${collections.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${guava.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
