--- a/rpc-demo-server/pom.xml
+++ b/rpc-demo-server/pom.xml
@@ -19,6 +19,11 @@
         </dependency>
         <dependency>
             <groupId>com.lzh</groupId>
+            <artifactId>rpc-demo-facade</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.lzh</groupId>
             <artifactId>rpc-server-starter</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
