--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,8 @@
         <collections.version>4.4</collections.version>
         <commons-lang.version>3.12.0</commons-lang.version>
         <guava.version>31.0.1-jre</guava.version>
+        <netty.version>4.1.69.Final</netty.version>
+        <hessian.version>4.0.65</hessian.version>
     </properties>
 
     <dependencyManagement>
@@ -68,6 +70,16 @@
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
                 <version>${guava.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.netty</groupId>
+                <artifactId>netty-all</artifactId>
+                <version>${netty.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.caucho</groupId>
+                <artifactId>hessian</artifactId>
+                <version>${hessian.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
